--- a/android-engineer.html
+++ b/android-engineer.html
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698532718-android-sr-engineer-mobile-developer-experience'>Square Android Sr. Engineer, Mobile Developer Experience | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698532718-android-sr-engineer-mobile-developer-experience'>Square Android Sr. Engineer, Mobile Developer Experience | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -127,7 +127,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/medopad/9321840f-9f98-4eb0-8e06-f02089e1e200'>Medopad - Senior Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/medopad/9321840f-9f98-4eb0-8e06-f02089e1e200'>Medopad - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -185,11 +185,11 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Deezer/743999697845491-android-engineer-customer-success'>Deezer Android Engineer - Customer Success | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Deezer/743999697845491-android-engineer-customer-success'>Deezer Android Engineer - Customer Success | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coinjobs.org/job/android-engineer-m-w-d-at-gnosis-service-gmbh/'>Android Engineer (m/w/d) at Gnosis Service GmbH ? CoinJobs</a></h5> 
+<h5><a href='https://coinjobs.org/job/android-engineer-m-w-d-at-gnosis-service-gmbh/'>Android Engineer (m/w/d) at Gnosis Service GmbH ? CoinJobs</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -242,7 +242,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/truemotion/jobs/1915179'>Job Application for Senior Android Engineer (mobile telematics) at TrueMotion</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/truemotion/jobs/1915179'>Job Application for Senior Android Engineer (mobile telematics) at TrueMotion</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -318,7 +318,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.talkdesk.com/careers/td/lisbon/ambassadors/ambassadors-fct-1900036?gh_jid=1900036'>Android Software Engineer  [Porto] - Careers | Talkdesk</a></h5> 
+<h5><a href='https://www.talkdesk.com/careers/td/lisbon/ambassadors/ambassadors-fct-1900036?gh_jid=1900036'>Android Software Engineer  [Porto] - Careers | Talkdesk</a></h5> 
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -330,7 +330,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">United States  NYC</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/fueled/jobs/1909614'>Job Application for Senior Android Engineer at Fueled</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fueled/jobs/1909614'>Job Application for Senior Android Engineer at Fueled</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -386,7 +386,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/2bb269a4-4f95-435b-910e-a3c2a24aaf2d'>Xfers - Lead Android Engineer - Singapore</a></h5> 
+<h5><a href='https://jobs.lever.co/xfers/2bb269a4-4f95-435b-910e-a3c2a24aaf2d'>Xfers - Lead Android Engineer - Singapore</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -416,7 +416,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Charlotte, NC  Canada</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8255-android-platform-engineer'>
+<h5><a href='https://www.42jobs.io/android/jobs/8255-android-platform-engineer'>
 Android Platform Engineer at TomTom in  | Android jobs | 42jobs.io
 
 </a></h5> 
@@ -442,7 +442,7 @@ mission to help parents teach financial literacy to kids.</p>
 <p><span class="badge badge-light">Toronto Toronto  Toronto  Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://greenlight.applytojob.com/apply/NcYeSJUJl6/Android-Software-Engineer'>Android Software Engineer - Greenlight - Career Page</a></h5> 
+<h5><a href='http://greenlight.applytojob.com/apply/NcYeSJUJl6/Android-Software-Engineer'>Android Software Engineer - Greenlight - Career Page</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -454,7 +454,7 @@ mission to help parents teach financial literacy to kids.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/shutterflyinc/job/oMF7afws'>Shutterfly Careers - Android Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/shutterflyinc/job/oMF7afws'>Shutterfly Careers - Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Description. As an Android Developer at Shutterfly you'll have an opportunity to 
 work on innovative mobile projects that would impact tens of millions of people's
