--- a/ios-developer.html
+++ b/ios-developer.html
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light">Buenos Aires, Argentina</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.impactbusinessgroup.com/jb/iOS-Developer-Jobs-in-Michigan-Grand-Rapids-Muskegon-/4825692'>iOS Developer Job in Grand Rapids Michigan, Grand Rapids-Muskegon- | IT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.impactbusinessgroup.com/jb/iOS-Developer-Jobs-in-Michigan-Grand-Rapids-Muskegon-/4825692'>iOS Developer Job in Grand Rapids Michigan, Grand Rapids-Muskegon- | IT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/startuptap/f4885ff4-9d2b-4627-8f7a-88347eba4852'>StartupTAP - iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/startuptap/f4885ff4-9d2b-4627-8f7a-88347eba4852'>StartupTAP - iOS Developer</a></h5> 
 <p><span class="badge badge-light">El Segundo, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -120,7 +120,7 @@
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999697957599-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999697957599-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Somerville United States</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -152,7 +152,7 @@
 <p><span class="badge badge-light">Mc Lean, VA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://karmarama.workable.com/jobs/1148015'>Senior iOS Developer - Karmarama</a></h5> 
+<h5><a href='https://karmarama.workable.com/jobs/1148015'>Senior iOS Developer - Karmarama</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 6, 2019 ... As a Senior iOS Developer you will need to be: An expert in using Xcode, Git and 
 building continuous integration pipelines; Demonstrable mastery in the?...</p>
@@ -289,7 +289,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<h5><a href='https://endios.join.com/jobs/431573-senior-ios-developer-m-f-d'>Job @ endios (Hamburg): Senior iOS Developer (m/f/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/431573-senior-ios-developer-m-f-d'>Job @ endios (Hamburg): Senior iOS Developer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -341,7 +341,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DalitsoConsulting/743999692008325-hiring-ios-developer'>Dalitso Consulting Hiring: iOS Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DalitsoConsulting/743999692008325-hiring-ios-developer'>Dalitso Consulting Hiring: iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">South Africa</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -433,7 +433,7 @@ designed apps (in terms of technical design) and why. This is open ended and?...
 Software Development. Full-time. Apply for this job. TradeRev is an online 
 automotive?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tulip/71c3f977-cc99-417f-a927-8e710a94bb37'>Tulip Retail - Senior iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tulip/71c3f977-cc99-417f-a927-8e710a94bb37'>Tulip Retail - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
